// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test ButtonCircle click event 1`] = `
<ButtonCircle
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  iconName="bomb"
  iconStyle=""
  id=""
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  obj="ButtonCircle"
  onClick={[MockFunction]}
  padding=""
  selected={false}
  sizing="normal"
  style={
    Object {
      "borderColor": "#000000",
    }
  }
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <Wrapper
    bottom=""
    className=""
    contentEditable={false}
    controlled={true}
    direction="right"
    disabled={false}
    err={null}
    errorMessage=""
    focus={false}
    height=""
    iconName="bomb"
    iconStyle=""
    id=""
    left=""
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    notheme={false}
    obj="ButtonCircle"
    onClick={[MockFunction]}
    onError={[Function]}
    padding=""
    reset={false}
    selected={false}
    sizing="normal"
    style={
      Object {
        "borderColor": "#000000",
      }
    }
    testing={true}
    theme={null}
    tooltip=""
    top=""
    visible={true}
    width=""
    xcss={null}
  >
    <ThemeProvider
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "color": "#000000",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.5s",
        }
      }
    >
      <styled.div
        className="ui-button-circle"
      >
        <StyledComponent
          className="ui-button-circle"
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-htoDjs",
                "isStatic": true,
                "lastClassName": "nJPZJ",
                "rules": Array [
                  "
	",
                  "
	align-items: center;
	box-sizing: border-box;
	cursor: default;
	display: flex;
	height: 100%;
	justify-content: center;
	line-height: inherit;
	outline: none;
	overflow: visible;
	position: relative;
	user-select: none;
	width: 100%;
",
                  "
	height: unset;
",
                ],
              },
              "displayName": "styled.div",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-htoDjs",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
        >
          <div
            className="ui-button-circle sc-htoDjs nJPZJ"
          >
            <styled.div
              height="24px"
              width="24px"
            >
              <StyledComponent
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-dnqmqq",
                      "isStatic": false,
                      "lastClassName": "dXBgMn",
                      "rules": Array [
                        "
	border-radius: 4em;
	display: inline-block;
	height: ",
                        [Function],
                        ";
	width: ",
                        [Function],
                        ";
",
                      ],
                    },
                    "displayName": "styled.div",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-dnqmqq",
                    "target": "div",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
                height="24px"
                width="24px"
              >
                <div
                  className="sc-dnqmqq dXBgMn"
                  height="24px"
                  width="24px"
                >
                  <Styled(Button)
                    bottom=""
                    className=""
                    contentEditable={false}
                    controlled={true}
                    direction="right"
                    disabled={false}
                    err={null}
                    errorMessage=""
                    focus={false}
                    height=""
                    iconName="bomb"
                    iconStyle=""
                    id=""
                    left=""
                    location="none"
                    noedit={false}
                    nohover={false}
                    noripple={false}
                    notheme={false}
                    obj="ButtonCircle"
                    onClick={[MockFunction]}
                    padding=""
                    selected={false}
                    sizing="normal"
                    style={
                      Object {
                        "borderColor": "#000000",
                      }
                    }
                    testing={true}
                    theme={null}
                    tooltip=""
                    top=""
                    visible={true}
                    width=""
                    xcss={null}
                  >
                    <StyledComponent
                      bottom=""
                      className=""
                      contentEditable={false}
                      controlled={true}
                      direction="right"
                      disabled={false}
                      err={null}
                      errorMessage=""
                      focus={false}
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "sc-iwsKbI",
                            "isStatic": false,
                            "lastClassName": "dhUtso",
                            "rules": Array [
                              "
	border-radius: 4em;
	padding: ",
                              [Function],
                              ";

	",
                              [Function],
                              "
",
                            ],
                          },
                          "defaultStyles": Object {},
                          "displayName": "Styled(Button)",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "sc-iwsKbI",
                          "target": [Function],
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                          Symbol(Symbol.hasInstance): [Function],
                        }
                      }
                      forwardedRef={null}
                      height=""
                      iconName="bomb"
                      iconStyle=""
                      id=""
                      left=""
                      location="none"
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      notheme={false}
                      obj="ButtonCircle"
                      onClick={[MockFunction]}
                      padding=""
                      selected={false}
                      sizing="normal"
                      style={
                        Object {
                          "borderColor": "#000000",
                        }
                      }
                      testing={true}
                      theme={null}
                      tooltip=""
                      top=""
                      visible={true}
                      width=""
                      xcss={null}
                    >
                      <Button
                        bottom=""
                        className="sc-iwsKbI dhUtso"
                        contentEditable={false}
                        controlled={true}
                        direction="right"
                        disabled={false}
                        err={null}
                        errorMessage=""
                        focus={false}
                        height=""
                        iconName="bomb"
                        iconStyle=""
                        id=""
                        left=""
                        location="none"
                        noedit={false}
                        nohover={false}
                        noripple={false}
                        notheme={false}
                        obj="ButtonCircle"
                        onClick={[MockFunction]}
                        padding=""
                        selected={false}
                        sizing="normal"
                        style={
                          Object {
                            "borderColor": "#000000",
                          }
                        }
                        testing={true}
                        theme={null}
                        tooltip=""
                        top=""
                        visible={true}
                        width=""
                        xcss={null}
                      >
                        <Wrapper
                          bottom=""
                          className="sc-iwsKbI dhUtso"
                          contentEditable={false}
                          controlled={true}
                          direction="right"
                          disabled={false}
                          err={null}
                          errorMessage=""
                          focus={false}
                          height=""
                          iconName="bomb"
                          iconStyle=""
                          id=""
                          left=""
                          location="none"
                          noedit={false}
                          nohover={false}
                          noripple={false}
                          notheme={false}
                          obj="ButtonCircle"
                          onClick={[MockFunction]}
                          onError={[Function]}
                          padding=""
                          reset={false}
                          selected={false}
                          sizing="normal"
                          style={
                            Object {
                              "borderColor": "#000000",
                            }
                          }
                          testing={true}
                          theme={null}
                          tooltip=""
                          top=""
                          visible={true}
                          width=""
                          xcss={null}
                        >
                          <ThemeProvider
                            theme={
                              Object {
                                "backgroundColor": "#ffffff",
                                "borderColor": "#c0c0c0",
                                "color": "#000000",
                                "headerBackgroundColor": "#004358",
                                "headerForegroundColor": "#ffffff",
                                "headerHoverColor": "#ffe11a",
                                "hoverColor": "#c0c0c0",
                                "inputBorderColor": "#c0c0c0",
                                "itemHoverColor": "#bedb39",
                                "selectedBackgroundColor": "#1f8a70",
                                "selectedForegroundColor": "#ffe11a",
                                "titleBarBackgroundColor": "#004358",
                                "titleBarForegroundColor": "#ffe11a",
                                "tooltipBackgroundColor": "#708090",
                                "tooltipForegroundColor": "#ffffff",
                                "transitionDelay": "0.5s",
                              }
                            }
                          >
                            <styled.div
                              className="ui-button ripple sc-iwsKbI dhUtso"
                              disabled={false}
                              id="Button-0"
                              onClick={[Function]}
                              sizing="normal"
                              style={
                                Object {
                                  "borderColor": "#000000",
                                }
                              }
                              visible={true}
                            >
                              <StyledComponent
                                className="ui-button ripple sc-iwsKbI dhUtso"
                                disabled={false}
                                forwardedComponent={
                                  Object {
                                    "$$typeof": Symbol(react.forward_ref),
                                    "attrs": Array [],
                                    "componentStyle": ComponentStyle {
                                      "componentId": "sc-gzVnrw",
                                      "isStatic": false,
                                      "lastClassName": "bsgMqy",
                                      "rules": Array [
                                        "
	",
                                        "
	align-items: center;
	box-sizing: border-box;
	cursor: default;
	display: flex;
	height: 100%;
	justify-content: center;
	line-height: inherit;
	outline: none;
	overflow: visible;
	position: relative;
	user-select: none;
	width: 100%;
",
                                        "

	flex: 1;

	&:not(.nohover):hover {
		background-color: ",
                                        [Function],
                                        " ",
                                        [Function],
                                        ";
	}

	",
                                        [Function],
                                        "
	",
                                        [Function],
                                        "
",
                                      ],
                                    },
                                    "displayName": "styled.div",
                                    "foldedComponentIds": Array [],
                                    "render": [Function],
                                    "styledComponentId": "sc-gzVnrw",
                                    "target": "div",
                                    "toString": [Function],
                                    "warnTooManyClasses": [Function],
                                    "withComponent": [Function],
                                  }
                                }
                                forwardedRef={null}
                                id="Button-0"
                                onClick={[Function]}
                                sizing="normal"
                                style={
                                  Object {
                                    "borderColor": "#000000",
                                  }
                                }
                                visible={true}
                              >
                                <div
                                  className="ui-button ripple sc-iwsKbI dhUtso sc-gzVnrw bsgMqy"
                                  disabled={false}
                                  id="Button-0"
                                  onClick={[Function]}
                                  style={
                                    Object {
                                      "borderColor": "#000000",
                                    }
                                  }
                                >
                                  <Icon
                                    bottom=""
                                    className=""
                                    contentEditable={false}
                                    controlled={true}
                                    direction="right"
                                    disabled={false}
                                    err={null}
                                    errorMessage=""
                                    focus={false}
                                    height=""
                                    iconName="bomb"
                                    id=""
                                    imageFile=""
                                    left=""
                                    location="none"
                                    noedit={false}
                                    nohover={false}
                                    noripple={false}
                                    notheme={false}
                                    obj="Icon"
                                    padding=""
                                    selected={false}
                                    sizing="normal"
                                    style={Object {}}
                                    testing={true}
                                    theme={null}
                                    tooltip=""
                                    top=""
                                    visible={true}
                                    width=""
                                    xcss={null}
                                  >
                                    <Wrapper
                                      bottom=""
                                      className=""
                                      contentEditable={false}
                                      controlled={true}
                                      direction="right"
                                      disabled={false}
                                      err={null}
                                      errorMessage=""
                                      focus={false}
                                      height=""
                                      iconName="bomb"
                                      id=""
                                      imageFile=""
                                      left=""
                                      location="none"
                                      noedit={false}
                                      nohover={false}
                                      noripple={false}
                                      notheme={false}
                                      obj="Icon"
                                      onError={[Function]}
                                      padding=""
                                      reset={false}
                                      selected={false}
                                      sizing="normal"
                                      style={Object {}}
                                      testing={true}
                                      theme={null}
                                      tooltip=""
                                      top=""
                                      visible={true}
                                      width=""
                                      xcss={null}
                                    >
                                      <ThemeProvider
                                        theme={
                                          Object {
                                            "backgroundColor": "#ffffff",
                                            "borderColor": "#c0c0c0",
                                            "color": "#000000",
                                            "headerBackgroundColor": "#004358",
                                            "headerForegroundColor": "#ffffff",
                                            "headerHoverColor": "#ffe11a",
                                            "hoverColor": "#c0c0c0",
                                            "inputBorderColor": "#c0c0c0",
                                            "itemHoverColor": "#bedb39",
                                            "selectedBackgroundColor": "#1f8a70",
                                            "selectedForegroundColor": "#ffe11a",
                                            "titleBarBackgroundColor": "#004358",
                                            "titleBarForegroundColor": "#ffe11a",
                                            "tooltipBackgroundColor": "#708090",
                                            "tooltipForegroundColor": "#ffffff",
                                            "transitionDelay": "0.5s",
                                          }
                                        }
                                      >
                                        <styled.i
                                          bottom=""
                                          className="ui-icon fa fa-fw fa-bomb"
                                          contentEditable={false}
                                          controlled={true}
                                          direction="right"
                                          disabled={false}
                                          err={null}
                                          errorMessage=""
                                          focus={false}
                                          height=""
                                          iconName="bomb"
                                          id=""
                                          imageFile=""
                                          left=""
                                          location="none"
                                          noedit={false}
                                          nohover={false}
                                          noripple={false}
                                          notheme={false}
                                          obj="Icon"
                                          padding=""
                                          selected={false}
                                          sizing="normal"
                                          style={Object {}}
                                          testing={true}
                                          theme={null}
                                          tooltip=""
                                          top=""
                                          visible={true}
                                          width=""
                                          xcss={null}
                                        >
                                          <StyledComponent
                                            bottom=""
                                            className="ui-icon fa fa-fw fa-bomb"
                                            contentEditable={false}
                                            controlled={true}
                                            direction="right"
                                            disabled={false}
                                            err={null}
                                            errorMessage=""
                                            focus={false}
                                            forwardedComponent={
                                              Object {
                                                "$$typeof": Symbol(react.forward_ref),
                                                "attrs": Array [],
                                                "componentStyle": ComponentStyle {
                                                  "componentId": "sc-bwzfXH",
                                                  "isStatic": false,
                                                  "lastClassName": "hBOHvv",
                                                  "rules": Array [
                                                    "
	text-align: center;
	",
                                                    [Function],
                                                    "
	",
                                                    [Function],
                                                    "
	",
                                                    [Function],
                                                    "
	",
                                                    [Function],
                                                    "
",
                                                  ],
                                                },
                                                "displayName": "styled.i",
                                                "foldedComponentIds": Array [],
                                                "render": [Function],
                                                "styledComponentId": "sc-bwzfXH",
                                                "target": "i",
                                                "toString": [Function],
                                                "warnTooManyClasses": [Function],
                                                "withComponent": [Function],
                                              }
                                            }
                                            forwardedRef={null}
                                            height=""
                                            iconName="bomb"
                                            id=""
                                            imageFile=""
                                            left=""
                                            location="none"
                                            noedit={false}
                                            nohover={false}
                                            noripple={false}
                                            notheme={false}
                                            obj="Icon"
                                            padding=""
                                            selected={false}
                                            sizing="normal"
                                            style={Object {}}
                                            testing={true}
                                            theme={null}
                                            tooltip=""
                                            top=""
                                            visible={true}
                                            width=""
                                            xcss={null}
                                          >
                                            <i
                                              className="ui-icon fa fa-fw fa-bomb sc-bwzfXH hBOHvv"
                                              contentEditable={false}
                                              direction="right"
                                              disabled={false}
                                              height=""
                                              id=""
                                              selected={false}
                                              style={Object {}}
                                              width=""
                                            />
                                          </StyledComponent>
                                        </styled.i>
                                      </ThemeProvider>
                                    </Wrapper>
                                  </Icon>
                                </div>
                              </StyledComponent>
                            </styled.div>
                          </ThemeProvider>
                        </Wrapper>
                      </Button>
                    </StyledComponent>
                  </Styled(Button)>
                </div>
              </StyledComponent>
            </styled.div>
          </div>
        </StyledComponent>
      </styled.div>
    </ThemeProvider>
  </Wrapper>
</ButtonCircle>
`;

exports[`Test creation of a ButtonCircle control 1`] = `
<Wrapper
  bottom=""
  className="test-class"
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  iconName="bomb"
  iconStyle=""
  id=""
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  obj="ButtonCircle"
  onClick={[Function]}
  onError={[Function]}
  padding=""
  reset={false}
  selected={false}
  sizing="normal"
  style={
    Object {
      "borderColor": "#000000",
    }
  }
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <styled.div
    className="ui-button-circle test-class"
  >
    <styled.div
      height="24px"
      width="24px"
    >
      <Styled(Button)
        bottom=""
        className="test-class"
        contentEditable={false}
        controlled={true}
        direction="right"
        disabled={false}
        err={null}
        errorMessage=""
        focus={false}
        height=""
        iconName="bomb"
        iconStyle=""
        id=""
        left=""
        location="none"
        noedit={false}
        nohover={false}
        noripple={false}
        notheme={false}
        obj="ButtonCircle"
        onClick={[Function]}
        padding=""
        selected={false}
        sizing="normal"
        style={
          Object {
            "borderColor": "#000000",
          }
        }
        testing={true}
        theme={null}
        tooltip=""
        top=""
        visible={true}
        width=""
        xcss={null}
      />
    </styled.div>
  </styled.div>
</Wrapper>
`;

exports[`Test disabling of a ButtonCircle control 1`] = `
<ButtonCircle
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={true}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  iconName="bomb"
  iconStyle=""
  id=""
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  obj="ButtonCircle"
  onClick={[MockFunction]}
  padding=""
  selected={false}
  sizing="normal"
  style={
    Object {
      "borderColor": "#000000",
    }
  }
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <Wrapper
    bottom=""
    className=""
    contentEditable={false}
    controlled={true}
    direction="right"
    disabled={true}
    err={null}
    errorMessage=""
    focus={false}
    height=""
    iconName="bomb"
    iconStyle=""
    id=""
    left=""
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    notheme={false}
    obj="ButtonCircle"
    onClick={[MockFunction]}
    onError={[Function]}
    padding=""
    reset={false}
    selected={false}
    sizing="normal"
    style={
      Object {
        "borderColor": "#000000",
      }
    }
    testing={true}
    theme={null}
    tooltip=""
    top=""
    visible={true}
    width=""
    xcss={null}
  >
    <ThemeProvider
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "color": "#000000",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.5s",
        }
      }
    >
      <styled.div
        className="ui-button-circle"
      >
        <StyledComponent
          className="ui-button-circle"
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-htoDjs",
                "isStatic": true,
                "lastClassName": "nJPZJ",
                "rules": Array [
                  "
	",
                  "
	align-items: center;
	box-sizing: border-box;
	cursor: default;
	display: flex;
	height: 100%;
	justify-content: center;
	line-height: inherit;
	outline: none;
	overflow: visible;
	position: relative;
	user-select: none;
	width: 100%;
",
                  "
	height: unset;
",
                ],
              },
              "displayName": "styled.div",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-htoDjs",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
        >
          <div
            className="ui-button-circle sc-htoDjs nJPZJ"
          >
            <styled.div
              height="24px"
              width="24px"
            >
              <StyledComponent
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-dnqmqq",
                      "isStatic": false,
                      "lastClassName": "dXBgMn",
                      "rules": Array [
                        "
	border-radius: 4em;
	display: inline-block;
	height: ",
                        [Function],
                        ";
	width: ",
                        [Function],
                        ";
",
                      ],
                    },
                    "displayName": "styled.div",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-dnqmqq",
                    "target": "div",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
                height="24px"
                width="24px"
              >
                <div
                  className="sc-dnqmqq dXBgMn"
                  height="24px"
                  width="24px"
                >
                  <Styled(Button)
                    bottom=""
                    className=""
                    contentEditable={false}
                    controlled={true}
                    direction="right"
                    disabled={true}
                    err={null}
                    errorMessage=""
                    focus={false}
                    height=""
                    iconName="bomb"
                    iconStyle=""
                    id=""
                    left=""
                    location="none"
                    noedit={false}
                    nohover={false}
                    noripple={false}
                    notheme={false}
                    obj="ButtonCircle"
                    onClick={[MockFunction]}
                    padding=""
                    selected={false}
                    sizing="normal"
                    style={
                      Object {
                        "borderColor": "#000000",
                      }
                    }
                    testing={true}
                    theme={null}
                    tooltip=""
                    top=""
                    visible={true}
                    width=""
                    xcss={null}
                  >
                    <StyledComponent
                      bottom=""
                      className=""
                      contentEditable={false}
                      controlled={true}
                      direction="right"
                      disabled={true}
                      err={null}
                      errorMessage=""
                      focus={false}
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "sc-iwsKbI",
                            "isStatic": false,
                            "lastClassName": "dhUtso",
                            "rules": Array [
                              "
	border-radius: 4em;
	padding: ",
                              [Function],
                              ";

	",
                              [Function],
                              "
",
                            ],
                          },
                          "defaultStyles": Object {},
                          "displayName": "Styled(Button)",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "sc-iwsKbI",
                          "target": [Function],
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                          Symbol(Symbol.hasInstance): [Function],
                        }
                      }
                      forwardedRef={null}
                      height=""
                      iconName="bomb"
                      iconStyle=""
                      id=""
                      left=""
                      location="none"
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      notheme={false}
                      obj="ButtonCircle"
                      onClick={[MockFunction]}
                      padding=""
                      selected={false}
                      sizing="normal"
                      style={
                        Object {
                          "borderColor": "#000000",
                        }
                      }
                      testing={true}
                      theme={null}
                      tooltip=""
                      top=""
                      visible={true}
                      width=""
                      xcss={null}
                    >
                      <Button
                        bottom=""
                        className="sc-iwsKbI dhUtso"
                        contentEditable={false}
                        controlled={true}
                        direction="right"
                        disabled={true}
                        err={null}
                        errorMessage=""
                        focus={false}
                        height=""
                        iconName="bomb"
                        iconStyle=""
                        id=""
                        left=""
                        location="none"
                        noedit={false}
                        nohover={false}
                        noripple={false}
                        notheme={false}
                        obj="ButtonCircle"
                        onClick={[MockFunction]}
                        padding=""
                        selected={false}
                        sizing="normal"
                        style={
                          Object {
                            "borderColor": "#000000",
                          }
                        }
                        testing={true}
                        theme={null}
                        tooltip=""
                        top=""
                        visible={true}
                        width=""
                        xcss={null}
                      >
                        <Wrapper
                          bottom=""
                          className="sc-iwsKbI dhUtso"
                          contentEditable={false}
                          controlled={true}
                          direction="right"
                          disabled={true}
                          err={null}
                          errorMessage=""
                          focus={false}
                          height=""
                          iconName="bomb"
                          iconStyle=""
                          id=""
                          left=""
                          location="none"
                          noedit={false}
                          nohover={false}
                          noripple={false}
                          notheme={false}
                          obj="ButtonCircle"
                          onClick={[MockFunction]}
                          onError={[Function]}
                          padding=""
                          reset={false}
                          selected={false}
                          sizing="normal"
                          style={
                            Object {
                              "borderColor": "#000000",
                            }
                          }
                          testing={true}
                          theme={null}
                          tooltip=""
                          top=""
                          visible={true}
                          width=""
                          xcss={null}
                        >
                          <ThemeProvider
                            theme={
                              Object {
                                "backgroundColor": "#ffffff",
                                "borderColor": "#c0c0c0",
                                "color": "#000000",
                                "headerBackgroundColor": "#004358",
                                "headerForegroundColor": "#ffffff",
                                "headerHoverColor": "#ffe11a",
                                "hoverColor": "#c0c0c0",
                                "inputBorderColor": "#c0c0c0",
                                "itemHoverColor": "#bedb39",
                                "selectedBackgroundColor": "#1f8a70",
                                "selectedForegroundColor": "#ffe11a",
                                "titleBarBackgroundColor": "#004358",
                                "titleBarForegroundColor": "#ffe11a",
                                "tooltipBackgroundColor": "#708090",
                                "tooltipForegroundColor": "#ffffff",
                                "transitionDelay": "0.5s",
                              }
                            }
                          >
                            <styled.div
                              className="ui-button nohover sc-iwsKbI dhUtso"
                              disabled={true}
                              id="Button-0"
                              onClick={[Function]}
                              sizing="normal"
                              style={
                                Object {
                                  "borderColor": "#000000",
                                }
                              }
                              visible={true}
                            >
                              <StyledComponent
                                className="ui-button nohover sc-iwsKbI dhUtso"
                                disabled={true}
                                forwardedComponent={
                                  Object {
                                    "$$typeof": Symbol(react.forward_ref),
                                    "attrs": Array [],
                                    "componentStyle": ComponentStyle {
                                      "componentId": "sc-gzVnrw",
                                      "isStatic": false,
                                      "lastClassName": "PSLHj",
                                      "rules": Array [
                                        "
	",
                                        "
	align-items: center;
	box-sizing: border-box;
	cursor: default;
	display: flex;
	height: 100%;
	justify-content: center;
	line-height: inherit;
	outline: none;
	overflow: visible;
	position: relative;
	user-select: none;
	width: 100%;
",
                                        "

	flex: 1;

	&:not(.nohover):hover {
		background-color: ",
                                        [Function],
                                        " ",
                                        [Function],
                                        ";
	}

	",
                                        [Function],
                                        "
	",
                                        [Function],
                                        "
",
                                      ],
                                    },
                                    "displayName": "styled.div",
                                    "foldedComponentIds": Array [],
                                    "render": [Function],
                                    "styledComponentId": "sc-gzVnrw",
                                    "target": "div",
                                    "toString": [Function],
                                    "warnTooManyClasses": [Function],
                                    "withComponent": [Function],
                                  }
                                }
                                forwardedRef={null}
                                id="Button-0"
                                onClick={[Function]}
                                sizing="normal"
                                style={
                                  Object {
                                    "borderColor": "#000000",
                                  }
                                }
                                visible={true}
                              >
                                <div
                                  className="ui-button nohover sc-iwsKbI dhUtso sc-gzVnrw PSLHj"
                                  disabled={true}
                                  id="Button-0"
                                  onClick={[Function]}
                                  style={
                                    Object {
                                      "borderColor": "#000000",
                                    }
                                  }
                                >
                                  <Icon
                                    bottom=""
                                    className=""
                                    contentEditable={false}
                                    controlled={true}
                                    direction="right"
                                    disabled={false}
                                    err={null}
                                    errorMessage=""
                                    focus={false}
                                    height=""
                                    iconName="bomb"
                                    id=""
                                    imageFile=""
                                    left=""
                                    location="none"
                                    noedit={false}
                                    nohover={false}
                                    noripple={false}
                                    notheme={false}
                                    obj="Icon"
                                    padding=""
                                    selected={false}
                                    sizing="normal"
                                    style={Object {}}
                                    testing={true}
                                    theme={null}
                                    tooltip=""
                                    top=""
                                    visible={true}
                                    width=""
                                    xcss={null}
                                  >
                                    <Wrapper
                                      bottom=""
                                      className=""
                                      contentEditable={false}
                                      controlled={true}
                                      direction="right"
                                      disabled={false}
                                      err={null}
                                      errorMessage=""
                                      focus={false}
                                      height=""
                                      iconName="bomb"
                                      id=""
                                      imageFile=""
                                      left=""
                                      location="none"
                                      noedit={false}
                                      nohover={false}
                                      noripple={false}
                                      notheme={false}
                                      obj="Icon"
                                      onError={[Function]}
                                      padding=""
                                      reset={false}
                                      selected={false}
                                      sizing="normal"
                                      style={Object {}}
                                      testing={true}
                                      theme={null}
                                      tooltip=""
                                      top=""
                                      visible={true}
                                      width=""
                                      xcss={null}
                                    >
                                      <ThemeProvider
                                        theme={
                                          Object {
                                            "backgroundColor": "#ffffff",
                                            "borderColor": "#c0c0c0",
                                            "color": "#000000",
                                            "headerBackgroundColor": "#004358",
                                            "headerForegroundColor": "#ffffff",
                                            "headerHoverColor": "#ffe11a",
                                            "hoverColor": "#c0c0c0",
                                            "inputBorderColor": "#c0c0c0",
                                            "itemHoverColor": "#bedb39",
                                            "selectedBackgroundColor": "#1f8a70",
                                            "selectedForegroundColor": "#ffe11a",
                                            "titleBarBackgroundColor": "#004358",
                                            "titleBarForegroundColor": "#ffe11a",
                                            "tooltipBackgroundColor": "#708090",
                                            "tooltipForegroundColor": "#ffffff",
                                            "transitionDelay": "0.5s",
                                          }
                                        }
                                      >
                                        <styled.i
                                          bottom=""
                                          className="ui-icon fa fa-fw fa-bomb"
                                          contentEditable={false}
                                          controlled={true}
                                          direction="right"
                                          disabled={false}
                                          err={null}
                                          errorMessage=""
                                          focus={false}
                                          height=""
                                          iconName="bomb"
                                          id=""
                                          imageFile=""
                                          left=""
                                          location="none"
                                          noedit={false}
                                          nohover={false}
                                          noripple={false}
                                          notheme={false}
                                          obj="Icon"
                                          padding=""
                                          selected={false}
                                          sizing="normal"
                                          style={Object {}}
                                          testing={true}
                                          theme={null}
                                          tooltip=""
                                          top=""
                                          visible={true}
                                          width=""
                                          xcss={null}
                                        >
                                          <StyledComponent
                                            bottom=""
                                            className="ui-icon fa fa-fw fa-bomb"
                                            contentEditable={false}
                                            controlled={true}
                                            direction="right"
                                            disabled={false}
                                            err={null}
                                            errorMessage=""
                                            focus={false}
                                            forwardedComponent={
                                              Object {
                                                "$$typeof": Symbol(react.forward_ref),
                                                "attrs": Array [],
                                                "componentStyle": ComponentStyle {
                                                  "componentId": "sc-bwzfXH",
                                                  "isStatic": false,
                                                  "lastClassName": "hBOHvv",
                                                  "rules": Array [
                                                    "
	text-align: center;
	",
                                                    [Function],
                                                    "
	",
                                                    [Function],
                                                    "
	",
                                                    [Function],
                                                    "
	",
                                                    [Function],
                                                    "
",
                                                  ],
                                                },
                                                "displayName": "styled.i",
                                                "foldedComponentIds": Array [],
                                                "render": [Function],
                                                "styledComponentId": "sc-bwzfXH",
                                                "target": "i",
                                                "toString": [Function],
                                                "warnTooManyClasses": [Function],
                                                "withComponent": [Function],
                                              }
                                            }
                                            forwardedRef={null}
                                            height=""
                                            iconName="bomb"
                                            id=""
                                            imageFile=""
                                            left=""
                                            location="none"
                                            noedit={false}
                                            nohover={false}
                                            noripple={false}
                                            notheme={false}
                                            obj="Icon"
                                            padding=""
                                            selected={false}
                                            sizing="normal"
                                            style={Object {}}
                                            testing={true}
                                            theme={null}
                                            tooltip=""
                                            top=""
                                            visible={true}
                                            width=""
                                            xcss={null}
                                          >
                                            <i
                                              className="ui-icon fa fa-fw fa-bomb sc-bwzfXH hBOHvv"
                                              contentEditable={false}
                                              direction="right"
                                              disabled={false}
                                              height=""
                                              id=""
                                              selected={false}
                                              style={Object {}}
                                              width=""
                                            />
                                          </StyledComponent>
                                        </styled.i>
                                      </ThemeProvider>
                                    </Wrapper>
                                  </Icon>
                                </div>
                              </StyledComponent>
                            </styled.div>
                          </ThemeProvider>
                        </Wrapper>
                      </Button>
                    </StyledComponent>
                  </Styled(Button)>
                </div>
              </StyledComponent>
            </styled.div>
          </div>
        </StyledComponent>
      </styled.div>
    </ThemeProvider>
  </Wrapper>
</ButtonCircle>
`;

exports[`Test making a ButtonCircle control invisible 1`] = `
<ButtonCircle
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  iconName="bomb"
  iconStyle=""
  id=""
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  obj="ButtonCircle"
  onClick={[MockFunction]}
  padding=""
  selected={false}
  sizing="normal"
  style={
    Object {
      "borderColor": "#000000",
    }
  }
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={false}
  width=""
  xcss={null}
>
  <Wrapper
    bottom=""
    className=""
    contentEditable={false}
    controlled={true}
    direction="right"
    disabled={false}
    err={null}
    errorMessage=""
    focus={false}
    height=""
    iconName="bomb"
    iconStyle=""
    id=""
    left=""
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    notheme={false}
    obj="ButtonCircle"
    onClick={[MockFunction]}
    onError={[Function]}
    padding=""
    reset={false}
    selected={false}
    sizing="normal"
    style={
      Object {
        "borderColor": "#000000",
      }
    }
    testing={true}
    theme={null}
    tooltip=""
    top=""
    visible={false}
    width=""
    xcss={null}
  >
    <ThemeProvider
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "color": "#000000",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.5s",
        }
      }
    >
      <styled.div
        className="ui-button-circle"
      >
        <StyledComponent
          className="ui-button-circle"
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-htoDjs",
                "isStatic": true,
                "lastClassName": "nJPZJ",
                "rules": Array [
                  "
	",
                  "
	align-items: center;
	box-sizing: border-box;
	cursor: default;
	display: flex;
	height: 100%;
	justify-content: center;
	line-height: inherit;
	outline: none;
	overflow: visible;
	position: relative;
	user-select: none;
	width: 100%;
",
                  "
	height: unset;
",
                ],
              },
              "displayName": "styled.div",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-htoDjs",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
        >
          <div
            className="ui-button-circle sc-htoDjs nJPZJ"
          >
            <styled.div
              height="24px"
              width="24px"
            >
              <StyledComponent
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-dnqmqq",
                      "isStatic": false,
                      "lastClassName": "dXBgMn",
                      "rules": Array [
                        "
	border-radius: 4em;
	display: inline-block;
	height: ",
                        [Function],
                        ";
	width: ",
                        [Function],
                        ";
",
                      ],
                    },
                    "displayName": "styled.div",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-dnqmqq",
                    "target": "div",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
                height="24px"
                width="24px"
              >
                <div
                  className="sc-dnqmqq dXBgMn"
                  height="24px"
                  width="24px"
                >
                  <Styled(Button)
                    bottom=""
                    className=""
                    contentEditable={false}
                    controlled={true}
                    direction="right"
                    disabled={false}
                    err={null}
                    errorMessage=""
                    focus={false}
                    height=""
                    iconName="bomb"
                    iconStyle=""
                    id=""
                    left=""
                    location="none"
                    noedit={false}
                    nohover={false}
                    noripple={false}
                    notheme={false}
                    obj="ButtonCircle"
                    onClick={[MockFunction]}
                    padding=""
                    selected={false}
                    sizing="normal"
                    style={
                      Object {
                        "borderColor": "#000000",
                      }
                    }
                    testing={true}
                    theme={null}
                    tooltip=""
                    top=""
                    visible={false}
                    width=""
                    xcss={null}
                  >
                    <StyledComponent
                      bottom=""
                      className=""
                      contentEditable={false}
                      controlled={true}
                      direction="right"
                      disabled={false}
                      err={null}
                      errorMessage=""
                      focus={false}
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "sc-iwsKbI",
                            "isStatic": false,
                            "lastClassName": "dhUtso",
                            "rules": Array [
                              "
	border-radius: 4em;
	padding: ",
                              [Function],
                              ";

	",
                              [Function],
                              "
",
                            ],
                          },
                          "defaultStyles": Object {},
                          "displayName": "Styled(Button)",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "sc-iwsKbI",
                          "target": [Function],
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                          Symbol(Symbol.hasInstance): [Function],
                        }
                      }
                      forwardedRef={null}
                      height=""
                      iconName="bomb"
                      iconStyle=""
                      id=""
                      left=""
                      location="none"
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      notheme={false}
                      obj="ButtonCircle"
                      onClick={[MockFunction]}
                      padding=""
                      selected={false}
                      sizing="normal"
                      style={
                        Object {
                          "borderColor": "#000000",
                        }
                      }
                      testing={true}
                      theme={null}
                      tooltip=""
                      top=""
                      visible={false}
                      width=""
                      xcss={null}
                    >
                      <Button
                        bottom=""
                        className="sc-iwsKbI dhUtso"
                        contentEditable={false}
                        controlled={true}
                        direction="right"
                        disabled={false}
                        err={null}
                        errorMessage=""
                        focus={false}
                        height=""
                        iconName="bomb"
                        iconStyle=""
                        id=""
                        left=""
                        location="none"
                        noedit={false}
                        nohover={false}
                        noripple={false}
                        notheme={false}
                        obj="ButtonCircle"
                        onClick={[MockFunction]}
                        padding=""
                        selected={false}
                        sizing="normal"
                        style={
                          Object {
                            "borderColor": "#000000",
                          }
                        }
                        testing={true}
                        theme={null}
                        tooltip=""
                        top=""
                        visible={false}
                        width=""
                        xcss={null}
                      >
                        <Wrapper
                          bottom=""
                          className="sc-iwsKbI dhUtso"
                          contentEditable={false}
                          controlled={true}
                          direction="right"
                          disabled={false}
                          err={null}
                          errorMessage=""
                          focus={false}
                          height=""
                          iconName="bomb"
                          iconStyle=""
                          id=""
                          left=""
                          location="none"
                          noedit={false}
                          nohover={false}
                          noripple={false}
                          notheme={false}
                          obj="ButtonCircle"
                          onClick={[MockFunction]}
                          onError={[Function]}
                          padding=""
                          reset={false}
                          selected={false}
                          sizing="normal"
                          style={
                            Object {
                              "borderColor": "#000000",
                            }
                          }
                          testing={true}
                          theme={null}
                          tooltip=""
                          top=""
                          visible={false}
                          width=""
                          xcss={null}
                        >
                          <ThemeProvider
                            theme={
                              Object {
                                "backgroundColor": "#ffffff",
                                "borderColor": "#c0c0c0",
                                "color": "#000000",
                                "headerBackgroundColor": "#004358",
                                "headerForegroundColor": "#ffffff",
                                "headerHoverColor": "#ffe11a",
                                "hoverColor": "#c0c0c0",
                                "inputBorderColor": "#c0c0c0",
                                "itemHoverColor": "#bedb39",
                                "selectedBackgroundColor": "#1f8a70",
                                "selectedForegroundColor": "#ffe11a",
                                "titleBarBackgroundColor": "#004358",
                                "titleBarForegroundColor": "#ffe11a",
                                "tooltipBackgroundColor": "#708090",
                                "tooltipForegroundColor": "#ffffff",
                                "transitionDelay": "0.5s",
                              }
                            }
                          >
                            <styled.div
                              className="ui-button ripple sc-iwsKbI dhUtso"
                              disabled={false}
                              id="Button-0"
                              onClick={[Function]}
                              sizing="normal"
                              style={
                                Object {
                                  "borderColor": "#000000",
                                }
                              }
                              visible={false}
                            >
                              <StyledComponent
                                className="ui-button ripple sc-iwsKbI dhUtso"
                                disabled={false}
                                forwardedComponent={
                                  Object {
                                    "$$typeof": Symbol(react.forward_ref),
                                    "attrs": Array [],
                                    "componentStyle": ComponentStyle {
                                      "componentId": "sc-gzVnrw",
                                      "isStatic": false,
                                      "lastClassName": "jvERqM",
                                      "rules": Array [
                                        "
	",
                                        "
	align-items: center;
	box-sizing: border-box;
	cursor: default;
	display: flex;
	height: 100%;
	justify-content: center;
	line-height: inherit;
	outline: none;
	overflow: visible;
	position: relative;
	user-select: none;
	width: 100%;
",
                                        "

	flex: 1;

	&:not(.nohover):hover {
		background-color: ",
                                        [Function],
                                        " ",
                                        [Function],
                                        ";
	}

	",
                                        [Function],
                                        "
	",
                                        [Function],
                                        "
",
                                      ],
                                    },
                                    "displayName": "styled.div",
                                    "foldedComponentIds": Array [],
                                    "render": [Function],
                                    "styledComponentId": "sc-gzVnrw",
                                    "target": "div",
                                    "toString": [Function],
                                    "warnTooManyClasses": [Function],
                                    "withComponent": [Function],
                                  }
                                }
                                forwardedRef={null}
                                id="Button-0"
                                onClick={[Function]}
                                sizing="normal"
                                style={
                                  Object {
                                    "borderColor": "#000000",
                                  }
                                }
                                visible={false}
                              >
                                <div
                                  className="ui-button ripple sc-iwsKbI dhUtso sc-gzVnrw jvERqM"
                                  disabled={false}
                                  id="Button-0"
                                  onClick={[Function]}
                                  style={
                                    Object {
                                      "borderColor": "#000000",
                                    }
                                  }
                                >
                                  <Icon
                                    bottom=""
                                    className=""
                                    contentEditable={false}
                                    controlled={true}
                                    direction="right"
                                    disabled={false}
                                    err={null}
                                    errorMessage=""
                                    focus={false}
                                    height=""
                                    iconName="bomb"
                                    id=""
                                    imageFile=""
                                    left=""
                                    location="none"
                                    noedit={false}
                                    nohover={false}
                                    noripple={false}
                                    notheme={false}
                                    obj="Icon"
                                    padding=""
                                    selected={false}
                                    sizing="normal"
                                    style={Object {}}
                                    testing={true}
                                    theme={null}
                                    tooltip=""
                                    top=""
                                    visible={true}
                                    width=""
                                    xcss={null}
                                  >
                                    <Wrapper
                                      bottom=""
                                      className=""
                                      contentEditable={false}
                                      controlled={true}
                                      direction="right"
                                      disabled={false}
                                      err={null}
                                      errorMessage=""
                                      focus={false}
                                      height=""
                                      iconName="bomb"
                                      id=""
                                      imageFile=""
                                      left=""
                                      location="none"
                                      noedit={false}
                                      nohover={false}
                                      noripple={false}
                                      notheme={false}
                                      obj="Icon"
                                      onError={[Function]}
                                      padding=""
                                      reset={false}
                                      selected={false}
                                      sizing="normal"
                                      style={Object {}}
                                      testing={true}
                                      theme={null}
                                      tooltip=""
                                      top=""
                                      visible={true}
                                      width=""
                                      xcss={null}
                                    >
                                      <ThemeProvider
                                        theme={
                                          Object {
                                            "backgroundColor": "#ffffff",
                                            "borderColor": "#c0c0c0",
                                            "color": "#000000",
                                            "headerBackgroundColor": "#004358",
                                            "headerForegroundColor": "#ffffff",
                                            "headerHoverColor": "#ffe11a",
                                            "hoverColor": "#c0c0c0",
                                            "inputBorderColor": "#c0c0c0",
                                            "itemHoverColor": "#bedb39",
                                            "selectedBackgroundColor": "#1f8a70",
                                            "selectedForegroundColor": "#ffe11a",
                                            "titleBarBackgroundColor": "#004358",
                                            "titleBarForegroundColor": "#ffe11a",
                                            "tooltipBackgroundColor": "#708090",
                                            "tooltipForegroundColor": "#ffffff",
                                            "transitionDelay": "0.5s",
                                          }
                                        }
                                      >
                                        <styled.i
                                          bottom=""
                                          className="ui-icon fa fa-fw fa-bomb"
                                          contentEditable={false}
                                          controlled={true}
                                          direction="right"
                                          disabled={false}
                                          err={null}
                                          errorMessage=""
                                          focus={false}
                                          height=""
                                          iconName="bomb"
                                          id=""
                                          imageFile=""
                                          left=""
                                          location="none"
                                          noedit={false}
                                          nohover={false}
                                          noripple={false}
                                          notheme={false}
                                          obj="Icon"
                                          padding=""
                                          selected={false}
                                          sizing="normal"
                                          style={Object {}}
                                          testing={true}
                                          theme={null}
                                          tooltip=""
                                          top=""
                                          visible={true}
                                          width=""
                                          xcss={null}
                                        >
                                          <StyledComponent
                                            bottom=""
                                            className="ui-icon fa fa-fw fa-bomb"
                                            contentEditable={false}
                                            controlled={true}
                                            direction="right"
                                            disabled={false}
                                            err={null}
                                            errorMessage=""
                                            focus={false}
                                            forwardedComponent={
                                              Object {
                                                "$$typeof": Symbol(react.forward_ref),
                                                "attrs": Array [],
                                                "componentStyle": ComponentStyle {
                                                  "componentId": "sc-bwzfXH",
                                                  "isStatic": false,
                                                  "lastClassName": "hBOHvv",
                                                  "rules": Array [
                                                    "
	text-align: center;
	",
                                                    [Function],
                                                    "
	",
                                                    [Function],
                                                    "
	",
                                                    [Function],
                                                    "
	",
                                                    [Function],
                                                    "
",
                                                  ],
                                                },
                                                "displayName": "styled.i",
                                                "foldedComponentIds": Array [],
                                                "render": [Function],
                                                "styledComponentId": "sc-bwzfXH",
                                                "target": "i",
                                                "toString": [Function],
                                                "warnTooManyClasses": [Function],
                                                "withComponent": [Function],
                                              }
                                            }
                                            forwardedRef={null}
                                            height=""
                                            iconName="bomb"
                                            id=""
                                            imageFile=""
                                            left=""
                                            location="none"
                                            noedit={false}
                                            nohover={false}
                                            noripple={false}
                                            notheme={false}
                                            obj="Icon"
                                            padding=""
                                            selected={false}
                                            sizing="normal"
                                            style={Object {}}
                                            testing={true}
                                            theme={null}
                                            tooltip=""
                                            top=""
                                            visible={true}
                                            width=""
                                            xcss={null}
                                          >
                                            <i
                                              className="ui-icon fa fa-fw fa-bomb sc-bwzfXH hBOHvv"
                                              contentEditable={false}
                                              direction="right"
                                              disabled={false}
                                              height=""
                                              id=""
                                              selected={false}
                                              style={Object {}}
                                              width=""
                                            />
                                          </StyledComponent>
                                        </styled.i>
                                      </ThemeProvider>
                                    </Wrapper>
                                  </Icon>
                                </div>
                              </StyledComponent>
                            </styled.div>
                          </ThemeProvider>
                        </Wrapper>
                      </Button>
                    </StyledComponent>
                  </Styled(Button)>
                </div>
              </StyledComponent>
            </styled.div>
          </div>
        </StyledComponent>
      </styled.div>
    </ThemeProvider>
  </Wrapper>
</ButtonCircle>
`;

exports[`Test retrieval of ButtonCircle props object 1`] = `
Object {
  "bottom": "",
  "children": null,
  "className": "",
  "contentEditable": false,
  "controlled": true,
  "direction": "right",
  "disabled": false,
  "err": null,
  "errorMessage": "",
  "focus": false,
  "height": "",
  "iconName": "bomb",
  "iconStyle": "",
  "id": "",
  "left": "",
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "notheme": false,
  "obj": "ButtonCircle",
  "onClick": [Function],
  "padding": "",
  "selected": false,
  "sizing": "normal",
  "style": Object {
    "borderColor": "#000000",
  },
  "testing": true,
  "theme": null,
  "tooltip": "",
  "top": "",
  "visible": true,
  "width": "",
  "xcss": null,
}
`;
